# niryo_one_ros

./: .gitignore
matlab_msg_gen_ros1/glnxa64/src/niryo_one_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab_msg_gen_ros1/glnxa64/src/niryo_one_msgs/include/niryo_one_msgs/: visibility_control.h
matlab_msg_gen_ros1/glnxa64/src/niryo_one_msgs/m/+ros/+internal/+ros/+custommessages/+niryo_one_msgs/: changeMotorConfigResponse.m  closeGripperResponse.m  controlConveyorRequest.m  controlConveyorResponse.m  debugColorDetectionRequest.m  debugMarkersRequest.m  debugMarkersResponse.m  digitalIOState.m  editGripResponse.m  editWorkspaceRequest.m  getCalibrationCamResponse.m  getTargetPoseRequest.m  getWorkspaceListResponse.m  getWorkspaceRobotPosesRequest.m  getWorkspaceRobotPosesResponse.m  logStatus.m  managePositionRequest.m  managePositionResponse.m  manageProcessRequest.m  manageProcessResponse.m  manageSequenceResponse.m  matlabMoveResult.m  objDetectionRequest.m  openGripperRequest.m  pingDxlToolRequest.m  pingDxlToolResponse.m  position.m  pullAirVacuumPumpResponse.m  pushAirVacuumPumpResponse.m  robotMoveResponse.m  robotState.m  sendCustomDxlValueRequest.m  sendCustomDxlValueResponse.m  sequenceAutorunStatus.m  setBoolResponse.m  setConveyorRequest.m  setConveyorResponse.m  setDigitalIORequest.m  setDigitalIOResponse.m  setIntResponse.m  (+7 more)
matlab_msg_gen_ros1/glnxa64/src/niryo_one_msgs/m/+ros/+msggen/+niryo_one_msgs/: ChangeHardwareVersionRequest.m  CloseGripperRequest.m  CloseGripperResponse.m  ControlConveyorResponse.m  ConveyorFeedback.m  DebugColorDetectionResponse.m  EditGripResponse.m  EditWorkspaceRequest.m  EditWorkspaceResponse.m  GetCalibrationCamRequest.m  GetCalibrationCamResponse.m  GetDigitalIORequest.m  GetDigitalIOResponse.m  GetPositionListRequest.m  GetPositionListResponse.m  GetTargetPoseRequest.m  GetTrajectoryListResponse.m  GetWorkspaceListRequest.m  GetWorkspaceListResponse.m  GetWorkspaceRatioRequest.m  GetWorkspaceRatioResponse.m  GetWorkspaceRobotPosesRequest.m  LogStatus.m  ManagePositionResponse.m  ManageProcessRequest.m  ManageProcessResponse.m  ManageSequenceRequest.m  ManageTrajectoryRequest.m  ObjDetectionResponse.m  Position.m  ProcessState.m  PullAirVacuumPumpResponse.m  RobotMoveCommand.m  RobotMoveRequest.m  Sequence.m  SequenceAutorunStatus.m  SetBoolRequest.m  SetCalibrationCamRequest.m  SetConveyorRequest.m  SetIntRequest.m  (+8 more)
matlab_msg_gen_ros1/glnxa64/src/niryo_one_msgs/src/: niryo_one_msgs_ChangeHardwareVersionRequest_common.cpp  niryo_one_msgs_ChangeHardwareVersionResponse_common.cpp  niryo_one_msgs_ChangeHardwareVersion_request_common.cpp  niryo_one_msgs_ChangeHardwareVersion_response_common.cpp  niryo_one_msgs_ChangeMotorConfigRequest_common.cpp  niryo_one_msgs_ChangeMotorConfigResponse_common.cpp  niryo_one_msgs_ChangeMotorConfig_request_common.cpp  niryo_one_msgs_ChangeMotorConfig_response_common.cpp  niryo_one_msgs_CloseGripperRequest_common.cpp  niryo_one_msgs_CloseGripperResponse_common.cpp  niryo_one_msgs_CloseGripper_request_common.cpp  niryo_one_msgs_CloseGripper_response_common.cpp  niryo_one_msgs_ControlConveyorRequest_common.cpp  niryo_one_msgs_ControlConveyorResponse_common.cpp  niryo_one_msgs_ControlConveyor_request_common.cpp  niryo_one_msgs_ControlConveyor_response_common.cpp  niryo_one_msgs_ConveyorFeedback_common.cpp  niryo_one_msgs_DebugColorDetectionRequest_common.cpp  niryo_one_msgs_DebugColorDetectionResponse_common.cpp  niryo_one_msgs_DebugColorDetection_request_common.cpp  niryo_one_msgs_DebugColorDetection_response_common.cpp  niryo_one_msgs_DebugMarkersRequest_common.cpp  niryo_one_msgs_DebugMarkersResponse_common.cpp  niryo_one_msgs_DebugMarkers_request_common.cpp  niryo_one_msgs_DebugMarkers_response_common.cpp  niryo_one_msgs_DigitalIOState_common.cpp  niryo_one_msgs_EditGripRequest_common.cpp  niryo_one_msgs_EditGripResponse_common.cpp  niryo_one_msgs_EditGrip_request_common.cpp  niryo_one_msgs_EditGrip_response_common.cpp  niryo_one_msgs_EditWorkspaceRequest_common.cpp  niryo_one_msgs_EditWorkspaceResponse_common.cpp  niryo_one_msgs_EditWorkspace_request_common.cpp  niryo_one_msgs_EditWorkspace_response_common.cpp  niryo_one_msgs_GetCalibrationCamRequest_common.cpp  niryo_one_msgs_GetCalibrationCamResponse_common.cpp  niryo_one_msgs_GetCalibrationCam_request_common.cpp  niryo_one_msgs_GetCalibrationCam_response_common.cpp  niryo_one_msgs_GetDigitalIORequest_common.cpp  niryo_one_msgs_GetDigitalIOResponse_common.cpp  (+414 more)
niryo_one_bringup/launch/: controllers.launch
niryo_one_description/config/: bosch_config.rviz  default_config.rviz
niryo_one_driver/config/: niryo_one_controllers.yaml
niryo_one_ikfast2_arm_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
niryo_one_ikfast2_arm_plugin/include/: ikfast0x10000049.Transform6D.0_1_2_3_4_5.pp
niryo_one_ikfast2_arm_plugin/src/: niryo_one_arm_ikfast_moveit_plugin.cpp  niryo_one_arm_ikfast_solver.cpp
niryo_one_ikfast_arm_plugin/: package.xml  update_ikfast_plugin.sh
niryo_one_ikfast_arm_plugin/src/: niryo_one_arm_ikfast_solver.cpp
niryo_one_moveit_config/: .setup_assistant
niryo_one_moveit_config/config/: kinematics.yaml
niryo_one_msgs/: CMakeLists.txt
niryo_one_python_api/examples/: pick_n_place_with_conveyor.py
obj_tf/: CMakeLists.txt  package.xml
obj_tf/doc/: niryoone_Processes.pptx
obj_tf/launch/: startArm.launch  startArmTest.launch  startMoveArmCpp.launch  startTFs.launch  startbeltCamera.launch
obj_tf/msg/: ObjRecognised.msg  ObjVisualiser.msg  WasteItem.msg  WasteItemArr.msg
obj_tf/src/: A3x3.py  README.md  SimpleNamespace.py  beltCameracv2.py  beltspeedlistener.py  broadcastObj.py  broadcastObjgenerated.py  broadcastObjgeneratedfixedspeed.py  broadcastObjneel.py  callbackfunction.m  cmdToTestPositionController.txt  controlLoop.py  controlLoopTest.py  createCollisionObjs.py  createbeltmarker.cpp  emtpyservicetester.m  matlabclienttester.py  moveArm.py  moveArm.py.bak  moveArmCpp.cpp  moveArmCpp4trajects.cpp  moveArmTest.py  (+14 more)
tutorial_utilities/: package.xml
tutorial_utilities/src/: path_generation.cpp
(+264 files in other folders)
