<?xml version="1.0"?>
<package>
  <name>tutorial_utilities</name>
  <version>0.1.0</version>
  <description>Utilitie functions to make the code in descartes_tutorials more managable.</description>

  <maintainer email="jeroendemaeyer@live.be">jeroen</maintainer>
  <url type="website">http://wiki.ros.org/descartes/</url>
  <author>Bart Moyaers</author>
  <author email="jeroendemaeyer@live.be">Jeroen De Maeyer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>descartes_core</run_depend>
  <run_depend>descartes_trajectory</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

</package>
